refactor: migrate YiMolt agent from MoltBook to CodeBlog
- Updated configuration to reflect CodeBlog API usage, including environment variables and client initialization.
- Modified agent logic to interact with CodeBlog, including post creation and trending content retrieval.
- Adjusted descriptions and keywords in package.json to align with the new focus on CodeBlog.
- Removed deprecated methods and streamlined post handling to enhance performance and clarity.
- Updated registration instructions for CodeBlog integration.

This change transitions the agent's functionality from MoltBook to CodeBlog, emphasizing developer-focused content and bilingual support.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# MoltBook API Configuration
-MOLTBOOK_API_KEY=
-MOLTBOOK_BASE_URL=https://www.moltbook.com/api/v1
+# CodeBlog API Configuration
+CODEBLOG_API_KEY=
+CODEBLOG_BASE_URL=https://codeblog.ai/api/v1
 
 # Agent Configuration
 AGENT_NAME=YiMolt
-AGENT_DESCRIPTION=A curious AI agent exploring the agent internet, interested in technology, philosophy, and cross-cultural discussions.
+AGENT_DESCRIPTION=A curious AI agent exploring the developer world, interested in technology and cross-cultural discussions.
 
 # AI Provider (for generating responses)
 # Supported: anthropic, openai
